Adding cart and Products category page

--- a/index.html
+++ b/index.html
@@ -403,100 +403,72 @@
     </div>
     <!-- Fin Container categorias -->
     <!-- Footer -->
-    <footer class="footer text-white bg-ahimsa pt-4">
+    <footer class="page-footer text-center text-md-left bg-ahimsa pt-0">
+        <!--Footer Links-->
+        <div class="container py-5 text-center text-md-left">
+            <div class="row pb-0">
 
-        <!-- Footer Links -->
-        <div class="main-footer neat-bg justify-content-center align-items-center align-content-center text-center mx-auto">
-            <div class="footer-row">
-                <div class="about">
+                <!--First column-->
+                <div class="col-md-4 col-lg-4 col-xl-3 mb-4 about w-100">
                     <img class="w-75" src="img/logo/ahimsa-logo.png" alt="Ahimsa">
-                    <h5 class="">Ahimsa, La Casa Vegana.</h5>
-                    <p><span>Sobre nosotros</span> Pastelería y Panadería 100% Vegana, nuestra misión es ofrecer un producto de libre de crueldad, que sea rico y saludable, sabemos que cambiando a una alimentación consciente se pueden generar cambios positivos
-                        a favor de los animales y por lo tanto del planeta... Es por esto que gritamos fuerte Go Vegan!!!</p>
+                    <h6 class="company">Ahimsa, La Casa Vegana.</h6>
+                    <hr class="yellow mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        Pastelería y Panadería 100% Vegana, nuestra misión es ofrecer un producto de libre de crueldad, que sea rico y saludable, sabemos que cambiando a una alimentación consciente se pueden generar cambios positivos a favor de los animales y por lo tanto del
+                        planeta... Es por esto que gritamos fuerte Go Vegan!!!
+                    </p>
                 </div>
-            </div>
-            <div class="footer-row">
-                <div class="links">
-                    <!-- Links -->
-                    <h6 class="text-uppercase">Dulces</h6>
-                    <hr class="w-25">
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Tortas</a>
-                        </li>
-                        <li>
-                            <a href="#!">Muffins</a>
-                        </li>
-                        <li>
-                            <a href="#!">Cupcackes</a>
-                        </li>
-                        <li>
-                            <a href="#!">Brownies</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-row">
-                <div class="links">
-                    <!-- Links -->
-                    <h6 class="text-uppercase">Salados</h6>
-                    <hr class="w-25">
+                <!--/.First column-->
 
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Empanadas</a>
-                        </li>
-                        <li>
-                            <a href="#!">Pizzas</a>
-                        </li>
-                        <li>
-                            <a href="#!">Panes</a>
-                        </li>
-                        <li>
-                            <a href="#!">Quinches</a>
-                        </li>
-                    </ul>
+                <!--Second column-->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 links">
+                    <h6>Dulces</h6>
+                    <hr class="yellow mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p><a href="#!">Tortas</a></p>
+                    <p><a href="#!">Muffins</a></p>
+                    <p><a href="#!">Cupcackes</a></p>
+                    <p><a href="#!">Brownies</a></p>
                 </div>
-            </div>
-            <div class="footer-row">
-                <div class="contact">
-                    <!-- Links -->
-                    <h6 class="text-uppercase">Contacto</h6>
-                    <hr class="w-25">
+                <!--/.Second column-->
 
-                    <ul class="list-unstyled">
-                        <li>
-                            <i class="fa fa-home"></i>
-                            <p>Rahue 2408, La Florida.</p>
-                        </li>
-                        <li>
-                            <i class="fa fa-envelope"></i>
-                            <p><a class="" href="mailto:ahimsa.lacasavegana@gmail.com">ahimsa.lacasavegana@gmail.com</a></p>
-                        </li>
-                        <li>
-                            <i class="fa fa-phone"></i>
-                            <p><a class="" href="tel:+56941514979">+569 41514979</a></p>
-                        </li>
-                        <li>
-                            <a class="social-icons facebook" href="https://www.facebook.com/Ahimsalacasavegana/" target="_blank"><i class="fab fa-facebook-f"></i>
-                                </a>
-                            <a class="social-icons instagram" href="https://www.instagram.com/ahimsa_vegana/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        </li>
-                    </ul>
+                <!--Third column-->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 links">
+                    <h6>Salados</h6>
+                    <hr class="yellow mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p><a href="#!">Empanadas</a></p>
+                    <p><a href="#!">Pizzas</a></p>
+                    <p><a href="#!">Panes</a></p>
+                    <p><a href="#!">Quiche</a></p>
                 </div>
+                <!--/.Third column-->
+
+                <!--Fourth column-->
+                <div class="col-md-4 col-lg-3 col-xl-3 contact pb-0">
+                    <h6>Contacto</h6>
+                    <hr class="yellow mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p><i class="fas fa-home mr-3"></i> Rahue 2408, La Florida.</p>
+                    <p><i class="fas fa-envelope mr-3"></i> <a class="email" href="mailto:ahimsa.lacasavegana@gmail.com">ahimsa.lacasavegana@gmail.com</a></p>
+                    <p><i class="fas fa-phone mr-3"></i> <a href="tel:+56941514979">+569 41514979</a></p>
+                    <p><i class="fas fa-phone mr-3"></i> <a href="tel:+56941514979">+569 41514979</a></p>
+                    <div class="social">
+                        <a class="social-icons facebook" href="https://www.facebook.com/Ahimsalacasavegana/" target="_blank"><i class="fab fa-facebook-f"></i>
+                            </a>
+                        <a class="social-icons instagram" href="https://www.instagram.com/ahimsa_vegana/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+                <!--/.Fourth column-->
+
             </div>
         </div>
-        <!-- Footer Links -->
+        <!--/.Footer Links-->
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">©
             <script>
                 document.write(new Date().getFullYear())
             </script>
-            ahimsa, la casa vegana
+            Ahimsa, La Casa Vegana
             <span class="border-left mx-2"></span>
-            <!-- <div class="footer-copyright text-center py-3">© 2019 Copyright: Ahimsa, la casa vegana -->
-            <!-- <a href="#"> Ahimsa, la casa vegana</a> -->
             <a href="mailto:mujd19@gmail.com"> Creado por: Maximiliano Rojas</a>
         </div>
         <!-- Copyright -->
